@@ -21,8 +21,8 @@
             "role": "lead"
         }
     ],
-    "version": "3.0.9",
-    "time": "2018-10-23",
+    "version": "3.0.10",
+    "time": "2019-05-12",
     "repositories": [
         {
             "type": "pear",
