@@ -2,7 +2,8 @@
 v3.0.10
 -------
 
-
+[mjr] Fix removing image stacks when resetting default image.
+[mjr] Fix fatal error when attempting to delete an image that doesn't exist.
 
 
 ------
